--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+:root {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+::before,
+::after {
+	box-sizing: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html,
+body {
+	height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+	margin: 0;
+	font-family: sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.app {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+	text-align: center;
+	padding: 20px 0;
+}
+
+.header h1 {
+	margin: 0 0 10px 0;
+}
+
+.header select {
+	font-size: 1rem;
+}
+
+.slideshow {
+	flex: 1;
+	background-color: #333;
+	position: relative;
+	overflow: hidden;
+}
+
+.slide {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center center;
+	opacity: 0;
+	transform: scale(1);
+	transition: all 0.9s ease-out;
+}
+
+.slide:nth-last-child(2) {
+	opacity: 1;
+	transform: scale(1.08);
+}
+
+.flex-center{
+	display:flex;
+	justify-content: center;
 }
